Force versions of maven-source, javadoc, and deploy plugins to help warnings on release:perform